# Multi-Layer-Hallucination-Detection-in-Large-Language-Models

./: .gitignore  BT33_AI_Hallucination_Detector.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
code/: REPORT_P9.md  hallucination_detector.py
code/results/: results.json
data/: P9_detection_metrics.json  P9_llm_detection_dataset.csv  results.json
docs/: THEORY.md
experiments/: p9_hallucination_validation.py
hallucination_detector/: __init__.py  citation.py  classifier.py  confidence.py  corpus.py  statistics.py  utils.py
tests/: test_detector.py
