[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "Multi-Layer Heuristic and Statistical Hallucination Detection in Large Language Models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Runtime-Slayers", url = "https://github.com/Runtime-Slayers" }
]
keywords = [
  "hallucination-detection",
  "large language models",
  "academic writing",
  "citation forensics",
  "statistical forensics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "scikit-learn>=1.0",
  "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Runtime-Slayers/Multi-Layer-Hallucination-Detection-in-Large-Language-Models"
Repository = "https://github.com/Runtime-Slayers/Multi-Layer-Hallucination-Detection-in-Large-Language-Models"

[project.scripts]
hallucination-validate = "experiments.p9_hallucination_validation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hallucination_detector*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:numpy",
  "ignore::PendingDeprecationWarning:numpy",
]

[tool.ruff]
line-length = 95
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
